# llm-rag-demo

./: .gitignore  README.md
annotations-helper/: README.md  main.py  pyproject.toml
annotations-helper/model/: embedding.py  prepare_data.py  response.py
ebooks-llm/: README.md  main.py  pyproject.toml
ebooks-llm/data/: crime_and_punishment.txt  idiot.txt  notes_from_the_underground.txt  the_brothers_karamazov.txt  white_nights_and_other_stories.txt
ebooks-llm/model/: prepare_data.py  response.py
ebooks-llm/rag/: prepare_data.py  response.py
